# datamaker-plugin-starter-template

./: .gitignore  setup.cfg
datamaker_plugin_name_plugin/: __init__.py
