[metadata]
name = datamaker-{plugin_name}-plugin
version = 0.1
description = datamaker {service_name} {plugin_name} plugin for agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.datamaker.io
author = datamaker
author_email = developer@datamaker.io
license = MIT
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    datamaker
    requests==2.26.0
    tqdm==4.62.3
