[metadata]
name = datamaker-{plugin-name}-plugin
version = 0.1
description = datamaker {plugin-name} {service-name} plugin for agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.datamaker.io
author = datamaker
author_email = developer@datamaker.io
license = MIT
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    datamaker-sdk
